# crypto-sentiment-data-pipeline

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/actions/delete-deployment/: action.yaml
.github/actions/delete-infra/: action.yml
.github/actions/setup-agent/: action.yaml  action.yml
.github/actions/setup-blocks/: action.yaml  action.yml
.github/actions/setup-cloud-run/: action.yaml
.github/actions/setup-deployment/: action.yaml  action.yml
.github/actions/setup-gcp/: action.yaml  action.yml
.github/workflows/: delete-setup.yaml  delete-setup.yml  init-setup.yaml  init-setup.yml  reset-deployment.yml  reset-setup.yaml
docker/: Dockerfile  deployments.Dockerfile
flows/: main.py
prefect/flows/: extract_load_data.py  main.py  transform_data.py
terraform/: avrs.tf  main.tf
