[tool.poetry]
name = "crypto-fear-and-greed-analysis"
version = "0.1.0"
description = "lala"
authors = ["Kirill Kuznetsov <kirill@kkuznets.dev>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "crypto_fear_and_greed_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pandas = "^2.0.0"
prefect-gcp = {extras = ["bigquery", "cloud-storage"], version = "^0.4.0"}
prefect = "^2.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
path = "venv"